--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@powersync/web": "^1.32.0",
     "@supabase/supabase-js": "^2.93.3",
     "@tailwindcss/vite": "^4.1.18",
+    "@types/mapbox-gl": "^3.4.1",
+    "mapbox-gl": "^3.18.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-map-gl": "^8.1.0",
     "react-router": "^7.13.0",
     "tailwindcss": "^4.1.18"
   },
