--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^19.2.0",
     "react-error-boundary": "^6.1.0",
     "react-map-gl": "^8.1.0",
+    "react-mobile-picker": "^1.2.0",
     "react-router": "^7.13.0",
     "react-swipeable": "^7.0.2",
     "tailwindcss": "^4.1.18",
